--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -10,6 +10,14 @@
 }
 
 /* ==================================
+            Body CSS
+================================== */
+
+body{
+    background-color: #F2F5F9;
+}
+
+/* ==================================
             Card CSS
 ================================== */
 
