--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -36,7 +36,7 @@ body{
             Card Header CSS
 ================================== */
 
-.cardHeader .images{
+.cardContainer .cardHeader .images{
     border-radius: 10px;
     width: 436px;
     height: 325px;
@@ -44,4 +44,24 @@ body{
     background-position: 0px 255px, 0px;
     background-repeat: no-repeat, no-repeat;
     background-size: 436px, cover;
+}
+
+/* ==================================
+            Card Body CSS
+================================== */
+
+.cardContainer .cardBody{
+    margin: 30px;
+}
+
+.cardContainer .cardBody h2{
+    font-family: poppins;
+    font-size: 1.5rem;
+    color: #111729;
+}
+
+.cardContainer .cardBody p{
+    font-family: lato;
+    font-size: 1rem;
+    color: #677489;
 }
